# signal-sieve

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  render.yaml  run_tests.py  signal_compare.py  signal_extract.py  signal_sieve.py  test_api.py
.github/ISSUE_TEMPLATE/: false_negative.md  false_positive.md
.github/workflows/: test.yml
templates/: docs.html  index.html
tests/: anonymous_claim.txt  attack_language.txt  financial_blackrock_strategy.txt  financial_market_snapshot.txt  financial_schwab_market_update.txt  financial_trowe_macro_update.txt  first_hand_witness.txt  hedged_opinion.txt  hype_social.txt  opinion_with_numbers.txt  press_release_official.txt  primary_clean.txt  primary_laundered.txt  short_specific_claim.txt  tertiary_wiki.txt
