[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signal-sieve"
version = "0.1.0"
description = "Heuristic pre-belief filter and source-custody assessor for AI pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["nlp", "misinformation", "rag", "llm", "heuristics", "signal", "noise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
signal-sieve = "signal_sieve:main"

[tool.setuptools]
py-modules = ["signal_sieve"]
